# fastapi-template

./: .gitignore  Dockerfile  README.md  check.sh  docker-compose.yml  fastapi_app.py  main.py  pylint.conf  pyproject.toml  readme.txt  requirements.dev.txt  requirements.txt
.github/workflows/: build.yml
app/: config.py
app/core/: config.py  kombu_message.py  log.py  middleware.py  requirements.text.txt  server_config.py  util.py  view.py
frontend/.cursor/rules/: readme.mdc
tests/: test_log.py  test_server_config.py
