[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "apscheduler>=3.11.0",
    "fastapi>=0.115.11",
    "kombu>=5.4.2",
    "loguru>=0.7.3",
    "pid>=3.0.4",
    "pydantic-settings>=2.8.1",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "python-lsp-server",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # Pyflakes
    "F", # Pyflakes rules (F821 checks undefined names)

    # Pycodestyle
    "E", # Error-level PEP 8 rules
    "W", # Warning-level PEP 8 rules

    # flake8 plugins
    "G",   # flake8-logging-format rules
    "B",   # flake8-bugbear rules
    "C4",  # flake8-comprehensions rules
    "N",   # pep8-naming rules
    "SIM", # flake8-simplify rules
    "ARG", # flake8-unused-arguments
    "ERA", # eradicate (commented out code)
    "PL",  # pylint rules
    "RUF", # Ruff-specific rules

    # Security
    "S", # flake8-bandit (security)
]
extend-select = ["I"] # isort
ignore = ["RUF001", "RUF002", "RUF003"]

# Logger objects that should be checked
logger-objects = ["app.logger", "logger"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
